# razer-ctl

./: .gitignore  Blade 16 pid and model no.txt  README.md
data/: README.md  annotations.csv  extract_data_from_capture.py  razer_commands.xlsx  wireshark_dump_raw.csv
docs/: protocol-research.md
librazer/: Cargo.toml
librazer/src/: command.rs  descriptor.rs  device.rs  packet.rs  types.rs
razer-cli/: Cargo.toml
razer-cli/src/: main.rs
razer-tray/: Cargo.toml
razer-tray/src/: main.rs
