[package]
name = "razer-tray"
version = "0.8.5"
edition = "2021"

authors = ["blauzim <original author Tarek Dakhran>"]
homepage = "https://github.com/blauzim/razer-ctl"
description = "A tray icon for controlling Razer Blade"

[dependencies]
anyhow = "1.0.80"
confy = "0.6.0"
image = "0.24.9"
librazer = { path = "../librazer" }
log = "0.4.21"
log4rs = "1.3.0"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness"] }
serde = { version = "1.0.197", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
tao = "0.26.0"
tray-icon = "0.11.3"
sysinfo = "0.29"
single-instance = "=0.1.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Power"] }

[build-dependencies]
embed-resource = "1.8"
